--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,8 @@ JB :
   comments :
     provider : duoshuo
     duoshuo : 
-      short_name : rookiecalf
-   
+      short_name : githubblog
+
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
@@ -121,7 +121,7 @@ JB :
   #
   sharing :
     provider : false
-    
+
   # Settings for all other include helpers can be defined by creating 
   # a hash with key named for the given helper. ex:
   #
@@ -132,4 +132,4 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-  
+
