测试添加文章分页
http://kingauthur.info/2013/01/20/the-paginator-and-excerpt-in-jekyll/
http://jekyllrb.com/docs/pagination/

--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,9 @@ JB :
     duoshuo : 
       short_name : githubblog
 
+  # 每一页显示的文章数
+   paginate: 5
+
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
