--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ paginate: 5
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : rookiecalf
+title : rookiecalf's blog
 tagline: Site Tagline
 author :
   name : rookiecalf
