--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,27 @@
 # This is the default format. 
-# For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:categories/:year/:month/:day/:title 
+# For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
+permalink: /post/:title.html
 
+safe: false
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+auto: true
+paginate: 10
+encoding: utf-8
 pygments: true
-
-#每一页显示的文章数
-paginate: 5
+markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "tables"]
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
 title : rookiecalf's blog
-tagline: Site Tagline
+tagline: Free as the wind.
 author :
   name : rookiecalf
   email : rookiecalf@gmail.com
   github : rookiecalf
-  #twitter : rookiecalf
-  #feedburner : rookiecalf
+
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -68,6 +71,7 @@ JB :
   #   /assets
   #
   ASSET_PATH : false
+  IMAGE_PATH : false
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
@@ -77,42 +81,31 @@ JB :
   tags_path : /tags.html
   atom_path : /atom.xml
   rss_path : /rss.xml
+  messages_path : /messages.html
+  about_path : /about.html
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
-  #comments :
-  #  provider : disqus
-  #  disqus :
-  #    short_name : jekyllbootstrap
-  #  livefyre :
-  #    site_id : 123
-  #  intensedebate :
-  #    account : 123abc
-  #  facebook :
-  #    appid : 123
-  #    num_posts: 5
-  #    width: 580
-  #    colorscheme: light
-
   comments :
     provider : duoshuo
-    duoshuo : 
+    duoshuo :
       short_name : githubblog
+
 
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : google 
+    provider : google
     google : 
-        tracking_id : 'UA-123-12'
+      tracking_id : 'UA-123-12'
     getclicky :
       site_id : 
     mixpanel :
-        token : '_MIXPANEL_TOKEN_'
+      token : '_MIXPANEL_TOKEN_'
     piwik :
         baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
         idsite : '1'                   # the id of the site on Piwik
@@ -135,4 +128,3 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-
