--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,7 @@ JB :
   rss_path : /rss.xml
   messages_path : /messages.html
   about_path : /about.html
+  music_path : /music.html
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
